# rust-pub-sub

./: .gitignore  Cargo.toml  README.md  class_diagram.md  subscriptions.cfg
benches/: glob_tree.rs  server_throughput.rs  udp_vs_tcp.rs
docs/: class_diagram.md  protocol.md  replay-mode.md  scaling.md
docs/ADRs/: 0-write-ahead-log.md  1-broadcast-channels.md  2-udp-multicast.md  2-udp.md  3-metrics.md  4-websockets.md  5-topic-schemas.md  6-topic-priorities.md  7-replay-server.md
docs/ideas/: scaling.md
examples/python-client/: client.py
g_pubsub/: Cargo.toml
g_pubsub/benches/: disk_vs_channel.rs
g_pubsub/src/: client.rs  config.rs  lib.rs  main.rs  metrics.rs  server.rs
g_pubsub/tests/: integration.rs
glob_tree/: Cargo.toml  README.md
glob_tree/benches/: main.rs
glob_tree/src/: lib.rs
issues/: bridge.md  sync_client.md  udp.md
issues/closed/: cpu_utilization.md  metrics_logging.md
lbroker/: Cargo.toml
lbroker/benches/: disk_vs_channel.rs
lbroker/src/: buffer_config.rs  client.rs  config.rs  interface.rs  lib.rs  main.rs  metrics.rs  server.rs
lbroker/tests/: integration.rs
proto/: helloworld.proto  transform.proto
pub_sub/: Cargo.toml
pub_sub/benches/: udp_vs_tcp.rs
pub_sub/src/: config.rs  glob_tree.rs  main.rs  metrics.rs
pub_sub/tests/: integration.rs
src/: client.rs  config.rs  datagram.rs  glob_tree.rs  gsub.rs  interface.rs  lib.rs  main.rs  metrics.rs  server.rs  subscription_tree.rs
tests/: integration.rs
