[package]
name = "rust-lab-sockets-threads"
version = "0.1.0"
edition = "2021"

[[bin]] # Bin to run the HelloWorld gRPC server
name = "helloworld-server"
path = "src/server.rs"

[[bin]] # Bin to run the HelloWorld gRPC client
name = "helloworld-client"
path = "src/client.rs"

[[bin]] # Bin to run the HelloWorld gRPC client
name = "main"
path = "src/main.rs"

[[bin]] # Bin to run the HelloWorld gRPC client
name = "client"
path = "src/client.rs"

[dependencies]
tonic = "0.11"
prost = "0.12"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "time"] }
serde = { version = "1.0.203", features = ["derive"] }
rmp = "0.8.14"
rmp-serde = "1.3.0"
rmpv = { version = "1.3.0", features = ["with-serde"] }
bytes = { version = "1.6.0", features = ["std"] }
log = "0.4.21"

[build-dependencies]
tonic-build = "0.11"
