[package]
name = "lbroker"
version = "0.1.0"
edition = "2021"

[dependencies]
rmp = "0.8.14"
rmp-serde = "1.3.0"
rmpv = { version = "1.3.0", features = ["with-serde"] }
env_logger = "0.11.5"
tonic = "0.11"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "time", "fs"] }
serde = { version = "1.0.203", features = ["derive"] }
bytes = { version = "1.6.0", features = ["std"] }
log = "0.4.21"
futures = "0.3.30"
clap = { version = "4.5.6", features = ["derive"] }
tokio-util = { version = "0.7.12", features = ["net", "codec"] }
tokio-stream = { version = "0.1.16", features = ["sync"] }
glob-tree = { path = "../glob_tree" }
dashmap = "6.1"

[dev-dependencies]
criterion = { version = "0.3", features = ["async_tokio"] }
flamegraph = "0.6.6"

[build-dependencies]
tonic-build = "0.11"
